tests/enum_from/compile_fail/field/invalid_attribute_syntax.stderr
error: Expected SourceEnum::SourceVariant.field_name
  --> tests/enum_from/compile_fail/field/invalid_attribute_syntax.rs:12:21
   |
12 |         #[enum_from(Source.x)] // Should be #[enum_from(Source::Struct.x)]
   |                     ^^^^^^
